# opengl-cpp

./: .gitmodules  CMakeLists.txt  README.md  requirements.md
res/: score.txt
res/model/: bld_ammunition.mtl  bld_grand_hotel.mtl  bld_trading_post.mtl  broken_barrel.mtl  church.mtl  piano.mtl  shed.mtl  skydome.mtl  stagecoach.mtl
res/models/: barrel.mtl  road_lr.mtl  tumbleweed.mtl
res/shader/: shader.glsl
src/: Application.cpp  Building.cpp  Building.hpp  FpsCam.cpp  FpsCam.hpp  ObjModel.cpp  ObjModel.hpp  Road.cpp  Road.hpp  Texture.cpp  Texture.hpp  Vehicle.cpp  Vehicle.hpp  barrel.cpp  barrel.hpp  drawable.hpp  main.cpp  tigl.cpp  tigl.hpp
test/: results.txt  test.cpp
